force-app/main/default/objects/Candidate_Document__c/Candidate_Document__c.object-meta.xml
<CustomObject>
    <label>Candidate Document</label>
    <nameField>
        <label>Candidate Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidate Document</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>