force-app/main/default/objects/Candidate_Document__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidate</label>
    <referenceTo>Candidate__c</referenceTo>
    <relationshipLabel>Candidate Document</relationshipLabel>
    <relationshipName>Candidate_Document</relationshipName>
    <type>Lookup</type>
</CustomField>