force-app/main/default/objects/Candidate_Document__c/fields/Processing_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Processing_Metadata__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Processing Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>